--- a/src/select2/match-multiple.tpl.html
+++ b/src/select2/match-multiple.tpl.html
@@ -4,9 +4,10 @@
   do not work: [class^="select2-choice"]
 -->
 <span class="ui-select-match">
-  <li class="ui-select-match-item select2-search-choice" ng-repeat="$item in $select.selected" 
+  <li class="ui-select-match-item select2-search-choice" ng-repeat="$item in $select.selected"
+
       ng-class="{'select2-search-choice-focus':$select.activeMatchIndex === $index, 'select2-locked':$select.isLocked(this, $index)}">
-      <span uis-transclude-append></span>
+      <span  role="option" id="ui-select2-choices-row-{{ $select.generatedId }}-{{$index}}" uis-transclude-append></span>
       <a href="javascript:;" class="ui-select-match-close select2-search-choice-close" ng-click="$select.removeChoice($index)" tabindex="-1"></a>
   </li>
 </span>
